<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="55dp"
    app:layout_scrollFlags="scroll"
    tools:context=".Fragment1">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/author_txt_invit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/invitation_txt" />

    <EditText
        android:id="@+id/invitation_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/fragmentMain" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/author_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/author_name_prompt" />

        <EditText
            android:id="@+id/author_name_edit"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/author_name_txt" />

        <TextView
            android:id="@+id/author_txt_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/author_surname_prompt" />

        <EditText
            android:id="@+id/author_surname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/author_surname_txt" />
    </LinearLayout>

    <Button
        android:id="@+id/apply_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />

</LinearLayout>