<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/swipe_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chevron_left"
            android:title="@string/menuL"

            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/main_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chevron_up"
            android:title="@string/menuC"

            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/list_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chevron_right"
            android:title="@string/menuR"

            app:showAsAction="ifRoom" />
    </group>
</menu>