<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/invitation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fragmentMain" />

    <ImageView
        android:id="@+id/invitation_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/emotion_neutral" />

    <TextView
        android:id="@+id/author_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/author_name_txt" />

    <TextView
        android:id="@+id/author_surname_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/author_surname_txt" />

    <TextView
        android:id="@+id/additional_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Setting Def" />

</LinearLayout>